--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -10,7 +10,7 @@
             <a class="nav-link" href="/statistics">Statystyki</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sieć</a>
+            <a class="nav-link" href="/network">Sieć</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/firewall">Firewall</a>
