--- a/views/network.ejs
+++ b/views/network.ejs
@@ -3,53 +3,99 @@
 <head>
   <title>Informacje o interfejsach sieciowych</title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <style>
+    .card {
+      margin-bottom: 20px;
+    }
+    .card-header {
+      background-color: #f2f2f2;
+    }
+    .card-title {
+      font-size: 20px;
+      margin-bottom: 0;
+    }
+    .card-body {
+      padding: 10px 15px;
+    }
+    .row {
+      margin-bottom: 5px;
+    }
+    .col {
+      padding: 5px;
+    }
+    strong {
+      font-weight: 600;
+    }
+  </style>
 </head>
 <body>
   <%- include('navbar.ejs') %>
   <div class="container mt-4">
     <h1>Informacje o interfejsach sieciowych</h1>
 
-    <% for (let i = 0; i < networkInterfaces.length; i++) {
-      const interface = networkInterfaces[i];
-    %>
-    <div class="card mt-4">
-      <div class="card-body">
-        <h2>
-          <%= interface.name %> 
-          <%= interface.status %>
-        </h2>
-        <div class="row align-items-end">
-          <div class="col">
-            <p><strong>Flags:</strong> <%= interface.flags.join(", ") %></p>
+    <div class="row">
+      <% networkInterfaces.forEach(interface => { %>
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h2 class="card-title">
+              <% if (interface.members && interface.members.length > 0) { %>
+                LAN - <%= interface.name %>
+              <% } else { %>
+                WAN - <%= interface.name %>
+              <% } %>
+              <small class="text-muted"><%= interface.status %></small>
+            </h2>
           </div>
-          <div class="col">
-            <p><strong>MTU:</strong> <%= interface.mtu %></p> 
-          </div>
-        </div>
-        <div class="row align-items-end">
-          <div class="col">
-            <p><strong>Address6:</strong> <%= interface.address6 %></p>
-            <p><strong>Prefix6:</strong> <%= interface.prefix6 %></p>
-          </div>
-          <div class="col">
-              <p><strong>Address:</strong> <%= interface.address %></p>
-              <p><strong>Netmask:</strong> <%= interface.netmask %></p>
-          </div>
-        </div>
-        <div class="row align-items-end">
-          <div class="col">
-            <p><strong>Speed:</strong> <%= interface.speed %></p>
-          </div>
-          <div class="col">
-            <p><strong>Duplex:</strong> <%= interface.duplex %></p>
+          <div class="card-body">
+            <% if (interface.members && interface.members.length > 0) { %>
+            <div class="card mb-3">
+              <div class="card-header">
+                <h4 class="card-title">Members</h4>
+              </div>
+              <div class="card-body">
+                <div class="row">
+                  <% interface.members.forEach(member => { %>
+                    <div class="col-md-4">
+                      <p><%= member %></p>
+                    </div>
+                  <% }) %>
+                </div>
+              </div>
+            </div>
+            <% } %>
+            <% if (interface.address) { %>
+            <div class="row">
+              <div class="col-md-4">
+                <p><strong>Address:</strong> <%= interface.address %></p>
+              </div>
+              <div class="col-md-4">
+                <p><strong>Netmask:</strong> <%= interface.mask %></p>
+              </div>
+              <div class="col-md-4">
+                <p><strong>Broadcast:</strong> <%= interface.broadcast %></p>
+              </div>
+            </div>
+            <% } %>
+            <% if (interface.ip) { %>
+            <div class="row">
+              <div class="col-md-4">
+                <p><strong>Bridge IP:</strong> <%= interface.ip %></p>
+              </div>
+              <div class="col-md-4">
+                <p><strong>Bridge Netmask:</strong> <%= interface.mask %></p>
+              </div>
+              <div class="col-md-4">
+                <p><strong>Bridge Broadcast:</strong> <%= interface.broadcast %></p>
+              </div>
+            </div>
+            <% } %>
           </div>
         </div>
       </div>
+      <% }) %>
     </div>
-    <% } %>
   </div>
-
   <%- include('footer.ejs') %>
-
 </body>
 </html>
