--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,39 @@
 <head>
   <title>Logowanie</title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <style>
+    .form-group {
+      margin-bottom: 2rem;
+    }
+  </style>
 </head>
 <body>
   <%- include('navbar.ejs') %>
   <div class="container mt-4">
     <h1>Logowanie</h1>
     
-    <form action="/login" method="POST">
-      <div class="form-group">
-        <label for="username">Nazwa użytkownika</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+    <div class="card">
+      <div class="card-body">
+        <form action="/login" method="POST" class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="username">Nazwa użytkownika</label>
+              <input type="text" class="form-control" id="username" name="username" required>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="password">Hasło</label>
+              <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+          </div>
+          <div class="col-md-12 text-center">
+            <button type="submit" class="btn btn-primary">Zaloguj się</button>
+            <button type="reset" class="btn btn-danger">Wyczyść</button>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="password">Hasło</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Zaloguj się</button>
-    </form>
+    </div>
   </div>
 
   <%- include('footer.ejs') %>
