--- a/views/firewall.ejs
+++ b/views/firewall.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <%- include('navbar.ejs') -%>
+    <% - include('navbar.ejs') -%>
 
     <div class="container mt-4">
     <h1>Ustawienia Firewalla</h1>
@@ -15,7 +15,7 @@
                 <h5 class="card-title">Firewall</h5>
             </div>
             <div class="card-body">
-                <div class="row mt-4">
+                <div class="row">
                 
                     <div class="form-group col-md-6 row">
                         <label class="col-md-4" for="enable">Włącz firewall:</label>
@@ -41,11 +41,12 @@
                         <h5 class="card-title">Otwarte porty TCP</h5>
                     </div>
                     <div class="card-body">
-                        <ul>
-                            <% openPorts.tcp.forEach(function(port) { %>
-                                <li><%= port %></li>
-                            <% }); %>
-                        </ul>
+                        <% openPorts.tcp.forEach(function(port) { %>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="tcpPort<%= port %>" name="tcpPort" value="<%= port %>" checked>
+                                <label class="form-check-label" for="tcpPort<%= port %>"><%= port %></label>
+                            </div>
+                        <% }); %>
                     </div>
                 </div>
             </div>
@@ -55,11 +56,12 @@
                         <h5 class="card-title">Otwarte porty UDP</h5>
                     </div>
                     <div class="card-body">
-                        <ul>
-                            <% openPorts.udp.forEach(function(port) { %>
-                                <li><%= port %></li>
-                            <% }); %>
-                        </ul>
+                        <% openPorts.udp.forEach(function(port) { %>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="udpPort<%= port %>" name="udpPort" value="<%= port %>" checked>
+                                <label class="form-check-label" for="udpPort<%= port %>"><%= port %></label>
+                            </div>
+                        <% }); %>
                     </div>
                 </div>
             </div>
@@ -69,6 +71,6 @@
     </form>
     </div>
 
-    <%- include('footer.ejs') -%>
+    <% - include('footer.ejs') -%>
 </body>
 </html>
