--- a/views/network.ejs
+++ b/views/network.ejs
@@ -95,7 +95,38 @@
       </div>
       <% }) %>
     </div>
-  </div>
-  <%- include('footer.ejs') %>
-</body>
-</html>
+    <% if (dhcpClients && dhcpClients.length > 0) { %>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h2 class="card-title">Klienci DHCP</h2>
+            </div>
+            <div class="card-body">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Adres IP</th>
+                    <th>Adres MAC</th>
+                    <th>Hostname</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% dhcpClients.forEach(client => { %>
+                  <tr>
+                    <td><%= client.ipAddress %></td>
+                    <td><%= client.macAddress.replace(";","") %></td>
+                    <td><%= client.hostname.replace(";","") %></td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% } %>
+    </div>
+    <%- include('footer.ejs') %>
+  </body>
+  </html>
