--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -25,30 +25,44 @@
             <label for="lanAddress">Adres sieci LAN</label>
             <input type="text" class="form-control" id="lanAddress" name="lanAddress" value="<%= lanAddress %>" required>
           </div>
-          <div class="form-group">
-            <label for="wanMode">WAN</label>
-            <select class="form-control" id="wanMode" name="wanMode" required>
-              <option value="dhcp" <%= wanMode === 'dhcp' ? 'selected' : '' %>>DHCP</option>
-              <option value="static" <%= wanMode === 'static' ? 'selected' : '' %>>Statyczne</option>
-            </select>
-          </div>
-          <% if (wanMode === 'static') { %>
-          <div class="form-group">
-            <label for="staticWanAddress">Adres WAN</label>
-            <input type="text" class="form-control" id="staticWanAddress" name="staticWanAddress" value="<%= staticWanAddress %>" required>
-          </div>
-          <% } %>
-          <div class="form-group">
-            <label for="dnsServers">Adresy serwerów DNS</label>
-            <input type="text" class="form-control" id="dnsServers" name="dnsServers" value="<%= dnsServers %>" required>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="dhcpEnabled" name="dhcpEnabled" <%= dhcpEnabled ? 'checked' : '' %>>
-            <label class="form-check-label" for="dhcpEnabled">DHCP</label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="dnsEnabled" name="dnsEnabled" <%= dnsEnabled ? 'checked' : '' %>>
-            <label class="form-check-label" for="dnsEnabled">DNS</label>
+          <h4 class="mt-4">Serwisy</h4>
+          <div class="form-row row">
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="dhcpEnabled" name="dhcpEnabled" <%= dhcpEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="dhcpEnabled">DHCP</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="dnsEnabled" name="dnsEnabled" <%= dnsEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="dnsEnabled">DNS</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="sambaEnabled" name="sambaEnabled" <%= sambaEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="sambaEnabled">SAMBA</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="mysqlEnabled" name="mysqlEnabled" <%= mysqlEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="mysqlEnabled">MySQL</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="nginxEnabled" name="nginxEnabled" <%= nginxEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="nginxEnabled">Nginx</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="sshEnabled" name="sshEnabled" <%= sshEnabled ? 'checked' : '' %>>
+                <label class="form-check-label" for="sshEnabled">SSH</label>
+              </div>
+            </div>
           </div>
         </div>
       </div>
