--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,17 @@
 <footer class="bg-light text-center text-lg-start mt-4 fixed-bottom">
   <div class="text-center p-3">
-    Przykładowa stopka z danymi &copy; 2023
+    <div class="d-flex align-items-center justify-content-center">
+      <div class="mr-3">
+        <img src="/img/uz_logo.png" alt="UZ Logo" height="50"> 
+      </div>
+      <div class="px-4">
+        <span>Dawid Studziński, Joanna Wojtasińska</span><br>
+        <span>&copy; 2023</span>
+      </div>
+      <div class="ml-3">
+        <img src="/img/wiea_logo.png" alt="WIEA Logo" height="50">
+      </div>
+    </div>
   </div>
 </footer>
 
