--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,29 +1,39 @@
+<script>
+  function goToPhpMyAdmin() {
+    var currentHost = window.location.hostname;
+    window.location.href = 'http://' + currentHost + '/phpmyadmin/';
+  }
+</script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="/">Router</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/statistics">Statystyki</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/network">Sieć</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/firewall">Firewall</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/settings">Ustawienia</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Wyloguj</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="/">Router</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/statistics">Statystyki</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/network">Sieć</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/firewall">Firewall</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/settings">Ustawienia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" onclick="goToPhpMyAdmin()">phpMyAdmin</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Wyloguj</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
