--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,7 +97,7 @@
         <div class="card mb-3">
           <div class="card-body">
             <h5 class="card-title">Czas działania</h5>
-            <p class="card-text"><%= serverInfo.uptime %> sekund</p>
+            <p class="card-text"><%= serverInfo.uptime %> s</p>
           </div>
         </div>
       </div>
